<resources>
    <string name="app_name">Reestr</string>
    <string name="action_settings">Settings</string>
    <string name="inputpath">Folder with files</string>
    <string name="outputpath">Folder to save</string>
    <string name="browse">Browse</string>
    <string name="sign_image">Sign image</string>
    <string name="person">Person</string>
    <string name="company">Company</string>
    <string name="delete_unnecessary_files_after_convertation">Delete unnecessary files after convertation</string>
    <string name="convert">Convert</string>
    <string name="new_folder">New folder</string>
    <string name="new_folder_name">New folder name</string>
    <string name="failed_to_create">Failed to create \'</string>
    <string name="failed_folder">\' folder</string>
</resources>
